refactor: изменить конструктор Task, удалить лишние пробелы. Использовать для истории LinkedList.