@@ -2,22 +2,20 @@ package manager;
 
 import tasks.Task;
 
-import java.util.ArrayList;
+import java.util.LinkedList;
 import java.util.List;
-
 
 public class InMemoryHistoryManager implements HistoryManager {
 
-    private static final List<Task> historyList = new ArrayList<>();
+    private static final LinkedList<Task> historyList = new LinkedList<>();
 
     @Override
     public void addHistory(Task task) {
-        if (historyList.size() < 10) {
-            historyList.add(task);
-        } else if (historyList.size() == 10) {
-            historyList.remove(0);
-            historyList.add(task);
+        if (historyList.size() == 10) {
+            //historyList.remove(0);
+            historyList.removeFirst();
         }
+        historyList.add(task);
     }
 
     @Override
